--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,7 +6,15 @@ sql:
     gen:
       go:
         package: "sqlc"
-        out: "sqlc"
+        out: "./db/sqlc"
         sql_package: "pgx/v5"
         emit_json_tags: true
-        
+        emit_interface: true
+        emit_empty_slices: true
+        overrides:
+          - db_type: "bigint"
+            go_type: "int64"
+          - db_type: "int8"
+            go_type: "int64"
+          - db_type: "timestamp"
+            go_type: "time.Time"
